started wroking on home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/home/emojione-monotone_construction-worker.svg" type="image/x-icon">
-    <title>WeConstruct</title>
+    <title>JethCode.</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -27,19 +27,17 @@
 
 <body>
     <!-- Header -->
-    <header class="header display-n" id="header">
+    <header class="header" id="header">
         <div id="overlay"></div>
         <nav class="nav container pt-2 pb-2">
             <!-- Nav Brand -->
             <div class="nav__brand ">
-                <a href="/" class="display-f align-center">
-                    <img loading="lazy" src="./assets/images/home/emojione-monotone_construction-worker.png"
-                        alt="WeConstruct" class="nav__brand-image pr-1">
-                    <span class="nav__brand-name ">WeConstruct</span>
+                <a href="/">             
+                    <span class="nav__brand-name ">JethCode.</span>
                 </a>
             </div>
             <!--  Cta Button-->
-            <a href="#contact-us" class="btn-primary text-white nav__cta hide-for-medium"> Get a Quote </a>
+            <button  class="btn-primary text-white nav__cta hide-for-medium"> Download CV</button>
         </nav>
     </header>
     <!-- End of Header -->
@@ -48,26 +46,37 @@
 
         <!-- Hero Section -->
         <section class="hero ">
-            <div class="container">
-                <div class="hero__text text-light">
-                    <section class="hero ">
-                        <div class="container">
-                            <div class="hero__text text-light">
-                                <h1 class="h1 text-white">
-                                    <span class="text-primary me-0">Jeth</span> 
-                                    <span>Code</span>  
-                                    <span class="text-primary">.</span>
-                                </h1>
-                            </div>
-                        </div>
-                    </section>
+            <div class="container row">
+                <div class="hero__text text-light col-12-xs col-7-md">
+                    <h1 class="hero__title h1"> 
+                        Hello! It's me  Roland Jethro Suyom
+                    </h1>
+                    <h2 class="hero__position">I am a Junior Full Stack Developer</h2>
+                    <div class="hero__description h4 mt-2 mb-2">
+                        <p>Lets  build beautiful websites.</p>
+                        <p class="mt-2">
+                            I <span class="text-primary fw-700 fade-in">Analyze</span>. I
+                            <span class="text-primary fw-700 fade-in">Develop</span>. I <span
+                                class="text-primary fw-700 fade-in">Deploy</span>.
+                        </p>
+                    </div>
+                    <a href="#contact-us" class="btn display-i-b btn-primary h4 text-white">
+                        Hire me
+                    </a>
+                </div>
+                <div class="col-4-md text-primary">
+                    <div class="hero__image">
+                        <img loading="lazy" src="/assets/images/Hero Section/Hero.png" alt="Roland Jethro Suyom">
+                    </div>
+                    <!-- <img src="/assets/icons/house-solid.svg" alt="">
+                    <i class="fa-solid fa-magnifying-glass"></i> -->
                 </div>
             </div>
         </section>
         <!-- End of Hero Section -->
 
         <!-- About Us Section -->
-        <section id="about-us" class="container section text-dark-gray about-us display-n">
+        <!-- <section id="about-us" class="container section text-dark-gray about-us">
             <h2 class="h2 mb-3 text-center text-black"> <span class="header-underline">About Us</span> </h2>
             <div class="row gap-3 justify-space-between align-start about-us__details">
                 <div class="col-12-sm col-5-md about-us__company border-line">
@@ -115,7 +124,7 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
         <!-- End of About Us section -->
 
         <!-- Services Section -->
