working on rotating icon menu

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <h1 class="hero__title h1"> 
                         Hello! It's me  Roland Jethro Suyom
                     </h1>
-                    <h2 class="hero__position">A Junior <span class="text-primary">Full Stack Developer</span></h2>
-                    <div class="hero__description h4 mt-2 mb-2">
+                    <h2 class="hero__position mt-2 mb-1">A Junior <span class="text-primary">Full Stack Developer</span></h2>
+                    <div class="hero__description h4 mb-2">
                         <p>I love creating awesome websites.</p>
-                        <p class="mt-2">
+                        <p>
                             I <span id="auto-type" class="text-primary fw-700"></span>
                         </p>
                     </div>
@@ -65,47 +65,47 @@
                     </a>
                 </div>
                 <div class="col-1-md"></div>
-                <div class="col-4-md text-primary display-f align-center flex-column justify-space-between">
+                <div class="col-4-md text-primary display-f align-center flex-column justify-space-between position-relative">
                     <div class="hero__image">
                         <img class="br-full" loading="lazy" src="/assets/images/hero-section/Hero.png" alt="Roland Jethro Suyom">
                     </div>
                     <!-- Home Page menu -->
-                    <div class="hero-menu">
-                        <div class="hero-menu__toggle">
-                            <button class="btn-outline-primary">Home</button>
+                    <div class="menu active position-relative">
+                        <div class="menu__toggle">
+                            <button class="btn-outline-primary menu-toggler">Home</button>
                         </div>
-                        <!-- <ul>
-                            <li style="--1:0;">
+                        <ul class="menu-icons position-absolute">
+                            <li style="--i:0;" class="menu-icon">
                                 <a class="btn btn-outline-primary br-full p-2" href="#header">
                                     <i class="fa-solid fa-house"></i>
                                 </a>
                             </li>
-                            <li style="--1:0;">
+                            <li style="--i:1;" class="menu-icon">
                                 <a class="btn btn-outline-primary br-full p-2" href="#about-me">
                                     <i class="fa-regular fa-address-card"></i>
                                 </a>
                             </li>
-                            <li style="--1:0;">
+                            <li style="--i:2;" class="menu-icon">
                                 <a class="btn btn-outline-primary br-full p-2" href="#skills">
                                     <i class="fa-solid fa-screwdriver-wrench"></i>
                                 </a>
                             </li>
-                            <li style="--1:0;">
+                            <li style="--i:3;" class="menu-icon">
                                 <a class="btn btn-outline-primary br-full p-2" href="#projects">
                                     <i class="fa-solid fa-list-check"></i>
                                 </a>
                             </li>
-                            <li style="--1:0;">
+                            <li style="--i:4;" class="menu-icon">
                                 <a class="btn btn-outline-primary br-full p-2" href="#testimonies">
                                     <i class="fa-solid fa-quote-left"></i>
                                 </a>
                             </li>
-                            <li style="--1:0;">
+                            <li style="--i:5;" class="menu-icon">
                                 <a class="btn btn-outline-primary br-full p-2" href="#contact-me">
                                     <i class="fa-regular fa-message"></i>
                                 </a>
                             </li>
-                        </ul> -->
+                        </ul>
                     </div>
                 </div>
             </div>
