working on circular menu

--- a/index.html
+++ b/index.html
@@ -64,48 +64,47 @@
                         Hire me
                     </a>
                 </div>
-                <div class="col-1-md"></div>
-                <div class="col-4-md text-primary display-f align-center flex-column justify-space-between position-relative">
-                    <div class="hero__image">
+                <div class="col-5-md text-primary display-f align-center flex-column justify-space-between position-relative">
+                    <div class="hero__image text-center">
                         <img class="br-full" loading="lazy" src="/assets/images/hero-section/Hero.png" alt="Roland Jethro Suyom">
+                        <a href="#" class="btn btn-primary text-light">Home</a>
                     </div>
                     <!-- Home Page menu -->
-                    <div class="menu active position-relative">
-                        <div class="menu__toggle">
-                            <button class="btn-outline-primary menu-toggler">Home</button>
+                    <div class="menu menu--hero">
+                        <div class="menu--hero__toggle">
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
                         </div>
-                        <ul class="menu-icons position-absolute">
-                            <li style="--i:0;" class="menu-icon">
-                                <a class="btn btn-outline-primary br-full p-2" href="#header">
-                                    <i class="fa-solid fa-house"></i>
-                                </a>
-                            </li>
-                            <li style="--i:1;" class="menu-icon">
-                                <a class="btn btn-outline-primary br-full p-2" href="#about-me">
-                                    <i class="fa-regular fa-address-card"></i>
-                                </a>
-                            </li>
-                            <li style="--i:2;" class="menu-icon">
-                                <a class="btn btn-outline-primary br-full p-2" href="#skills">
-                                    <i class="fa-solid fa-screwdriver-wrench"></i>
-                                </a>
-                            </li>
-                            <li style="--i:3;" class="menu-icon">
-                                <a class="btn btn-outline-primary br-full p-2" href="#projects">
-                                    <i class="fa-solid fa-list-check"></i>
-                                </a>
-                            </li>
-                            <li style="--i:4;" class="menu-icon">
-                                <a class="btn btn-outline-primary br-full p-2" href="#testimonies">
-                                    <i class="fa-solid fa-quote-left"></i>
-                                </a>
-                            </li>
-                            <li style="--i:5;" class="menu-icon">
-                                <a class="btn btn-outline-primary br-full p-2" href="#contact-me">
-                                    <i class="fa-regular fa-message"></i>
-                                </a>
-                            </li>
-                        </ul>
+
+                        <li style="--i:0;" class="menu--hero__icon">
+                            <a class="btn btn-outline-primary display-f align-center justify-center br-full" href="#header">
+                                <i class="fa-solid fa-house"></i>
+                            </a>
+                        </li>
+                        <li style="--i:1;" class="menu--hero__icon">
+                            <a class="btn btn-outline-primary display-f align-center justify-center br-full" href="#about-me">
+                                <i class="fa-regular fa-address-card"></i>
+                            </a>
+                        </li>
+                        <li style="--i:2;" class="menu--hero__icon">
+                            <a class="btn btn-outline-primary display-f align-center justify-center br-full" href="#skills">
+                                <i class="fa-solid fa-screwdriver-wrench"></i>
+                            </a>
+                        </li>
+                        <li style="--i:3;" class="menu--hero__icon">
+                            <a class="btn btn-outline-primary display-f align-center justify-center br-full" href="#projects">
+                                <i class="fa-solid fa-list-check"></i>
+                            </a>
+                        </li>
+                        <li style="--i:4;" class="menu--hero__icon">
+                            <a class="btn btn-outline-primary display-f align-center justify-center br-full" href="#testimonies">
+                                <i class="fa-solid fa-quote-left"></i>
+                            </a>
+                        </li>
+                        <li style="--i:5;" class="menu--hero__icon">
+                            <a class="btn btn-outline-primary display-f align-center justify-center br-full" href="#contact-me">
+                                <i class="fa-regular fa-message"></i>
+                            </a>
+                        </li>
                     </div>
                 </div>
             </div>
